# resolv-rs

./: .gitignore  Cargo.toml  README.md  index.html  search-index.js
libresolv-sys/: Cargo.toml  build.rs  lib.rs  resolv.lints  resolv.rs
libresolv-sys/lib.d/: lib_228.rs  lib_231.rs  lib_234.rs
libresolv_sys/: constant.AF_ALG.html  constant.AF_APPLETALK.html  constant.AF_ASH.html  constant.AF_ATMPVC.html  constant.AF_ATMSVC.html  constant.AF_AX25.html  constant.AF_BLUETOOTH.html  constant.AF_BRIDGE.html  constant.AF_CAIF.html  constant.AF_CAN.html  constant.AF_DECnet.html  constant.AF_ECONET.html  constant.AF_FILE.html  constant.AF_IB.html  constant.AF_IEEE802154.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_IPX.html  constant.AF_IRDA.html  constant.AF_ISDN.html  constant.AF_IUCV.html  constant.AF_KEY.html  constant.AF_LLC.html  constant.AF_LOCAL.html  constant.AF_MAX.html  constant.AF_MPLS.html  constant.AF_NETBEUI.html  constant.AF_NETLINK.html  constant.AF_NETROM.html  constant.AF_NFC.html  constant.AF_PACKET.html  constant.AF_PHONET.html  constant.AF_PPPOX.html  constant.AF_RDS.html  constant.AF_ROSE.html  constant.AF_ROUTE.html  constant.AF_RXRPC.html  constant.AF_SECURITY.html  constant.AF_SNA.html  constant.AF_TIPC.html  (+1504 more)
resolv/: enum.Class.html  enum.ResolverOption.html  enum.Section.html  index.html  sidebar-items.js  struct.Flags.html  struct.RecordItems.html  struct.Resolver.html  struct.Response.html
resolv/error/: enum.Error.html  enum.ResolutionError.html  index.html  sidebar-items.js
resolv/record/: enum.Class.html  enum.RecordType.html  index.html  sidebar-items.js  struct.A.html  struct.AAAA.html  struct.CNAME.html  struct.MX.html  struct.NS.html  struct.PTR.html  struct.Record.html  struct.SOA.html  struct.TXT.html  trait.RecordData.html
resolv/response/: enum.Section.html  (+3 more)
src/: error.rs  lib.rs  response.rs  tests.rs
(+52 files in other folders)
